--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   go_router: ^14.2.2
   firebase_core: ^3.3.0
   cloud_firestore: ^5.2.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
