--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core: ^3.3.0
   cloud_firestore: ^5.2.1
   intl: ^0.19.0
+  firebase_storage: ^12.1.3
+  file_picker: ^8.0.7
 
 dev_dependencies:
   flutter_test:
