--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   intl: ^0.19.0
   firebase_storage: ^12.1.3
   file_picker: ^8.0.7
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
